--- a/genindex.html
+++ b/genindex.html
@@ -1161,14 +1161,14 @@
         <li><a href="versioneer.html#versioneer.render_pep440_old">(in module versioneer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_post">render_pep440_post() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
         <li><a href="versioneer.html#versioneer.render_pep440_post">(in module versioneer)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_pre">render_pep440_pre() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -1208,6 +1208,8 @@
       <li><a href="copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_command_line">run_command_line() (in module copyxnat.ui.command_line)</a>
 </li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.api.run_command)</a>
+</li>
+      <li><a href="copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_entry_point">run_entry_point() (in module copyxnat.ui.command_line)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_next">run_next() (copyxnat.xnat.commands.Command method)</a>
 </li>
