--- a/genindex.html
+++ b/genindex.html
@@ -1298,6 +1298,8 @@
       <ul>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.user_visible_info">(copyxnat.xnat.xnat_interface.XnatFile method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.user_visible_info">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+</li>
       </ul></li>
   </ul></td>
 </tr></table>
